# ChessWithGuns

./: .gitignore  .gitmodules  CMakeLists.txt  nice_graph.csv
Resources/: Icon.icns  PawnWithAShotgun.flp
Scripts/: rendergraph.py
Source/: Board.cpp  CWG.cpp  Context.cpp  Elements.cpp  FX.cpp  Main.cpp  Menu.cpp  Player.cpp  SoundEffect.cpp  Texture.cpp  UI.cpp  Util.cpp
Source/Include/: CWG.hpp  CWGPCH.hpp  Context.hpp  Elements.hpp  FX.hpp  Player.hpp  SoundEffect.hpp  Texture.hpp  UI.hpp  Util.hpp
